added new Dto class