@@ -1,13 +1,14 @@
 package com.system.serviceImpl;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Random;
+import java.util.stream.Collectors;
 
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.system.dto.UsersDto;
+import com.system.dto.UsersDto1;
 import com.system.exception.ReourceNotFoundException;
 import com.system.model.Billing;
 import com.system.model.BillingItem;
@@ -15,6 +16,7 @@ import com.system.model.Products;
 import com.system.model.UserProducts;
 import com.system.model.Users;
 import com.system.modeldto.UsersModelDto;
+import com.system.repositary.BillingItemRepositary;
 import com.system.repositary.BillingRepositary;
 import com.system.repositary.ProductsRepositary;
 import com.system.repositary.UserProductsRepositary;
@@ -61,18 +63,15 @@ public class UsersServiceImpl implements UsersService {
 		Billing b = bUserRepositary.findById(bId).orElseThrow(() -> 
 		new ReourceNotFoundException("Billing Id Not Found On this UserID : " + bId));
 		
-		List<Products> p = pUserRepositary.findAll();
+
 		UsersDto userDto = new UsersDto();
 		userDto.setUName(u.getUName());
 		userDto.setMobileNo(u.getMobileNo());
 		userDto.setEMail(u.getEMail());
-		
-
 		// billing 
 		userDto.setBId(b.getBId());		
 		
-		UsersDto userDto1 = modelMapper.map(u, UsersDto.class);
-		return userDto1;
+		return userDto;
 		
 	}
 
@@ -80,7 +79,14 @@ public class UsersServiceImpl implements UsersService {
 	public List<UsersDto> getAllUsers() {
 		// TODO Auto-generated method stub
 		List<Users> list =  userRepositary.findAll();
-		List<UsersDto> list1 = list.stream().map(a -> modelMapper.map(a , UsersDto.class)).toList();
+	
+		List<UsersDto> list1 = list.stream().map(user -> {
+		    UsersDto dto = new UsersDto();
+		    dto.setUId(user.getUId());
+		    dto.setUName(user.getUName());
+		    return dto;
+		}
+		).collect(Collectors.toList());
 		return list1;
 	}
 
@@ -94,46 +100,6 @@ public class UsersServiceImpl implements UsersService {
 		return u;
 	}
 
-	
-	@Override
-	public UsersDto setProductsToUsers(Integer uId, Integer productId, int quantity) {
-	    Users user = userRepositary.findById(uId)
-	        .orElseThrow(() -> new ReourceNotFoundException("User Id Not Found: " + uId));
-
-	    Products product = pUserRepositary.findById(productId)
-	        .orElseThrow(() -> new ReourceNotFoundException("Product Id Not Found: " + productId));
-	    
-
-	    Integer check = product.getQuantityAvailable();
-	
-	    if(check > quantity) {
-	    UserProducts userProduct = new UserProducts();
-	
-	    userProduct.setUser(user);
-	    userProduct.setProduct(product);
-	    userProduct.setMrp(product.getMRP());
-	    userProduct.setQuantity(quantity);
-
-	    user.getUserProducts().add(userProduct);
-
-	
-	    upUserRepositary.save(userProduct);
-	    
-	    product.setQuantityAvailable(check-quantity);  
-	    pUserRepositary.save(product);
-	    
-	    }
-	    else {
-	     new ReourceNotFoundException("Product quantity is Not Avaliable on this Store ,"
-	     		+ " please select Other Products" + uId);
-	    }
-	   
-	    return modelMapper.map(user, UsersDto.class);
-	}
-
-
-
-	// model mapper is not working , so i choose  manual to retrive data using userDto
 	@Override
 	public UsersDto getUserDetailsById(Integer uId) {
 	    Users u = userRepositary.findById(uId)
@@ -158,14 +124,13 @@ public class UsersServiceImpl implements UsersService {
 	        Products product = firstProduct.getProduct();
 	        if (product != null) {
 	            userDto.setPId(product.getProductId());
-	            userDto.setPName(product.getProductName());
-	            userDto.setPCompany(product.getProductCompany());
+//	            userDto.setPName(product.getProductName());
+//	            userDto.setPCompany(product.getProductCompany());
 	            userDto.setMrp(product.getMRP());
 	            userDto.setExpiryDate(product.getExpiryDate());
 	        }
 	    }
 
-	    // Set billing details
 	    List<Billing> billingList = u.getBId();
 	    if (billingList != null && !billingList.isEmpty()) {
 	        Billing latestBilling = billingList.get(0);
@@ -174,7 +139,7 @@ public class UsersServiceImpl implements UsersService {
 	        List<BillingItem> items = latestBilling.getItemId();
 	        if (items != null && !items.isEmpty()) {
 	            BillingItem firstItem = items.get(0);
-	            userDto.setItemId(firstItem.getItemId());
+//	            userDto.setItemId(firstItem.getItemId());
 	            userDto.setQuantity(firstItem.getQuantity());
 	            userDto.setPrice(firstItem.getPrice());
 	            userDto.setTotalAmount(firstItem.getTotalAmount());
@@ -186,35 +151,49 @@ public class UsersServiceImpl implements UsersService {
 	}
 
 
-	// model mapper is not working 
-//	@Override
-//	public UsersDto getUserDetailsById(Integer uId) {
-//		// TODO Auto-generated method stub
-//		Users u =  userRepositary.findById(uId).orElseThrow(() -> 
-//		new ReourceNotFoundException("User Id Not Found On this UserID : " + uId));
-//		
-//		UsersDto userdto = modelMapper.map(u, UsersDto.class);
-//		
-//		  userdto.setProductList(u.getUserProducts());
-//	
-//		  List<Billing> billingList = u.getBId();
-//		    if (billingList != null && !billingList.isEmpty()) {
-//		        Billing latestBilling = billingList.get(0); 
-//		        userdto.setBId(latestBilling.getBId());
-//		        
-//		        List<BillingItem> items = latestBilling.getItemId();
-//		        if (items != null && !items.isEmpty()) {
-//		            BillingItem firstItem = items.get(0);
-//		            userdto.setItemId(firstItem.getItemId());
-//		            userdto.setQuantity(firstItem.getQuantity());
-//		            userdto.setPrice(firstItem.getPrice());
-//		            userdto.setTotalAmount(firstItem.getTotalAmount());
-//		            userdto.setCreatedAt(firstItem.getCreatedAt());
-//		        }
-//		    }
-//		
-//		return userdto;
-//	}
+	@Override
+	public UsersDto1 setProductsToUsers(Integer uId, Integer productId, int quantity) {
+	    Users user = userRepositary.findById(uId)
+	        .orElseThrow(() -> new ReourceNotFoundException("User Id Not Found: " + uId));
+
+	    Products product = pUserRepositary.findById(productId)
+	        .orElseThrow(() -> new ReourceNotFoundException("Product Id Not Found: " + productId));
+
+	    int available = product.getQuantityAvailable();
+
+	    if (quantity > available) {
+	        throw new ReourceNotFoundException("Product quantity is not available. Requested: " + quantity + ", Available: " + available);
+	    }
+
+
+	    if (user.getUserProducts() == null) {
+	        user.setUserProducts(new ArrayList<>());
+	    }
+
+	    UserProducts userProduct = new UserProducts();
+	    userProduct.setUser(user);
+	    userProduct.setProduct(product);
+	    userProduct.setMrp(product.getMRP());
+	    userProduct.setQuantity(quantity);
+
+	  
+	    user.getUserProducts().add(userProduct);
+
+	    upUserRepositary.save(userProduct);
+
+	    product.setQuantityAvailable(available - quantity);
+	    pUserRepositary.save(product);
+
+	    UsersDto1 dto = new UsersDto1();
+	    dto.setUName(user.getUName());
+	    dto.setMobileNo(user.getMobileNo());
+	    dto.setEMail(user.getEMail());
+	    dto.setUserProducts(List.of(userProduct));
+	  
+
+	    return dto;
+	}
+
 
 		
 }
